<resources>
    <string name="app_name">AppOderFood</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="matkhau">Nhập mật khẩu</string>
    <string name="ngaysinh">Nhập ngày sinh</string>
    <string name="cmnd">Nhập CMND</string>
    <string name="dongy">Đồng ý</string>
    <string name="thoat">Thoát</string>
    <string name="dangky">Đăng Ký</string>
    <string name="nhaptendangnhap">Vui lòng nhập tên đăng nhập</string>
    <string name="nhapmatkhau">Vui lòng nhập mật khẩu</string>
    <string name="themnhanvienthanhcong">Thêm nhân viên thành công</string>
    <string name="themnhanvienthatbai">Thêm nhân viên thất bại</string>
    <string name="dangnhap">Log In</string>
    <string name="trangchu">Trang chủ</string>
    <string name="thucdon">Thực đơn</string>
    <string name="nhanvien">Nhân viên</string>
    <string name="thongke">Thống kê</string>
    <string name="caidat">Cài đặt</string>
    <string name="mo">Mở</string>
    <string name="dong">Đóng</string>
    <string name="thembanan">thêm bàn ăn</string>
    <string name="themthucdon">thêm thực đơn</string>
    <string name="tenmonan">tên món ăn</string>
    <string name="giatien">giá tiền</string>
    <string name="banan">Bàn ăn</string>
    <string name="loaithucdon">Loại Thực Đơn</string>
    <string name="tenloai">Tên Loại Thực Đơn</string>
    <string name="nhaptenloaithucan">Vui lòng nhập tên loại món ăn</string>
    <string name="loithemmonan">Vui lòng điền đầy đủ thông tin</string>
    <string name="danhsachmonan">Danh Sach Cac Mon An</string>
    <string name="themthatbai">Thêm thất bại</string>
    <string name="soluongmonan">Số lượng món ăn</string>
    <string name="themthanhcong">Thêm thành công</string>
    <string name="soluong">Số lượng</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="tongcong">Tổng cộng : </string>
    <string name="thanhtoanthanhcong">Thanh toán thành công !</string>
    <string name="loi">Lỗi !</string>
    <string name="sua">Sữa</string>
    <string name="xoa">Xóa</string>
    <string name="xoathanhcong">Xóa thành công !</string>
    <string name="suathanhcong">Sữa thàng công !</string>
    <string name="themnhanvien">Thêm nhân viên !</string>
    <string name="capnhatnhanvien">Cập nhật nhân viên</string>
</resources>
