<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context=".DangKyActivity"
    android:background="@color/colorPrimary"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >
            <TextView
                android:id="@+id/txtTieuDeDangKy"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangky"
                android:textSize="@dimen/size30sd"
                android:layout_centerHorizontal="true"
                android:textStyle="bold"
                android:layout_margin="@dimen/size10dp"
                android:padding="@dimen/size10dp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linearLayout"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                >
                <EditText
                    android:id="@+id/edTenDangNhap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tendangnhap"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorGray"
                    android:padding="@dimen/size10dp"
                    android:layout_margin="@dimen/size10dp"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="@dimen/size10dp"
                    />

                <EditText
                    android:id="@+id/edMatKhau"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tendangnhap"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorGray"
                    android:padding="@dimen/size10dp"
                    android:layout_margin="@dimen/size10dp"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/size10dp"
                    android:password="true"
                    />
                <RadioGroup
                    android:id="@+id/rdGioiTinh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/rdNam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="Nam"/>
                    <RadioButton
                        android:id="@+id/rdNu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nữ"/>
                </RadioGroup>

                <Spinner
                    android:id="@+id/spinQuyen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Spinner>
                <EditText
                    android:id="@+id/edNgaySinh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ngaysinh"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorGray"
                    android:padding="@dimen/size10dp"
                    android:layout_margin="@dimen/size10dp"
                    android:drawableLeft="@drawable/calender"
                    android:drawablePadding="@dimen/size10dp"
                    />
                <EditText
                    android:id="@+id/edCmnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cmnd"
                    android:background="@color/colorWhite"
                    android:textColorHint="@color/colorGray"
                    android:textColor="@color/colorGray"
                    android:padding="@dimen/size10dp"
                    android:layout_margin="@dimen/size10dp"
                    android:drawableLeft="@drawable/idcard"
                    android:drawablePadding="@dimen/size10dp"
                    android:numeric="integer"
                    android:maxLength="8"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <Button
                        android:id="@+id/btnDongY"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dongy"
                        android:layout_weight="1"
                        android:padding="@dimen/size10dp"
                        android:layout_margin="@dimen/size10dp"
                        android:background="@color/colorGreenButton"
                        />
                    <Button
                        android:id="@+id/btnThoat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thoat"
                        android:layout_weight="1"
                        android:padding="@dimen/size10dp"
                        android:layout_margin="@dimen/size10dp"
                        android:background="@color/colorOrganButton"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>



</RelativeLayout>
